   whether it is initializing, reconnecting, or running regular loops [#1767]

 - Code which resolves full paths to libraries should now consider the common
   environment variable `LD_LIBRARY_PATH` as a preferred possible override
   to built-in paths (note that most operating systems advise against setting
   this variable unless troubleshooting, although other systems rely on it)
   [#805]

 - The `nut-scanner` usage and debug printouts now include the loadable library
   search paths, to help troubleshooting especially in multi-platform builds
   [#317]

 - The nut-scanner program was updated to fall back to loading unresolved
   library filenames, hoping that `lt_dlopen()` implementation on the current
   platform would find library files better [#805]

 - Detection of `libltdl` in `configure` script updated with fallback code to
   find it on systems that deliver the library to `/usr/local/lib` (e.g. on
   FreeBSD) [#1577]

 - An explicit `configure --with-nut-scanner` toggle was added, specifically
   so that build environments requesting `--with-all` but lack `libltdl` would
   abort and require either to install the dependency or explicitly forfeit
   the tool (some distro packages missed it quietly in the past) [#1560]

 - The `nut-scanner` program should now by default warn about serial numbers
   which do not make much sense (are duplicate, empty, all same character, etc)
   [#1810]

 - Existing openssl-1.1.0 support added for NUT v2.8.0 release was tested to
   be sufficient without deprecation warnings for builds against openssl-3.0.x
   (but no real-time testing was done yet) [#1547]

 - upslog: Added support for logging multiple devices with one call to the
   program [#1604]

 - Documentation to integrate NUT USB driver startup with `usb_resetter` script
   has been contributed to `scripts/usb_resetter` (the script itself is tracked
   externally on GitHub), along with a configuration example for Linux+systemd
   [#1887]
